# DouyinLiveRecorder

./: .gitignore  ffmpeg_install.py  main.py  pyproject.toml  requirements.txt  run_main.bat  监控时段功能说明.md
config/: URL_config.ini  config.ini  config.ini.backup
