[project]
name = "douyinliverecorder"
version = "0.1.0"
description = "抖音直播录制工具"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "loguru>=0.7.3",
    "pycryptodome>=3.20.0",
    "distro>=1.9.0",
    "tqdm>=4.67.1",
    "httpx[http2]>=0.28.1",
    "PyExecJS>=1.5.1",
    "pydantic>=2.0.0",
]
